--- a/app/app.css
+++ b/app/app.css
@@ -1,19 +1,6 @@
-﻿button, label, stack-layout {
-    horizontal-align: center;    
+.small-spacing {
+  margin: 5;
 }
-
-button {
-    font-size: 36;
+.medium-spacing {
+  margin: 10;
 }
-
-.title {
-    font-size: 30;
-    margin: 20;
-}
-
-.message {
-    font-size: 20;
-    color: #284848;
-    text-align: center;
-    margin: 0 20;
-} 
